Colaboratory を使用して作成しました

--- a/kerasCNN.ipynb
+++ b/kerasCNN.ipynb
@@ -295,6 +295,34 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0aGUP6nAPuyQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "fe7675a0-297a-4e40-d21a-178646652400"
+      },
+      "source": [
+        "test_loss, test_acc = model.evaluate(pixels, labels)\n",
+        "\n",
+        "print(\"Test_accuracy:\", test_acc)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "59999/59999 [==============================] - 3s 57us/step\n",
+            "Test_accuracy: 0.997533292221537\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
